--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
   <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
   <meta name="author" content="Irulappan" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/android-icon-192x192.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png" />
-  <link rel="manifest" href="/assets/img/favicon/manifest.json" />
+  <link rel="apple-touch-icon" sizes="57x57" href="./assets/img/favicon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="./assets/img/favicon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="./assets/img/favicon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="./assets/img/favicon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="./assets/img/favicon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="./assets/img/favicon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="./assets/img/favicon/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="./assets/img/favicon/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="./assets/img/favicon/manifest.json" />
   <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" />
+  <meta name="msapplication-TileImage" content="./assets/img/favicon/ms-icon-144x144.png" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
   <!-- Google Site Verification for indexing -->
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open irulappan's resume in a new tab" href="/assets/resume/irulappan_T- Resume.pdf" target="_blank"
+        <a aria-label="Open irulappan's resume in a new tab" href="./assets/resume/irulappan_T- Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -192,8 +192,8 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
-          href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
+        <a aria-label="Open irulappan's Resume in a new tab"
+          href="./assets/resume/irulappan_T-Resume.pdf" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -356,7 +356,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Paddy Leaf Disease Detection" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Paddy Leaf Disease Detection" src="./assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Multi Paddy Leaf Disease Detection<i
@@ -385,7 +385,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Phishing Website Detection app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Phishing Website Detection app" src="./assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Phishing Website Detection Model<i class="mdi-navigation-more-vert right"></i></span>
@@ -406,7 +406,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
+                <img alt="Screenshot of web app" src="./assets/img/project-blog-logo.jpg"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
@@ -430,7 +430,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/project-aim_bert-bias.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="./assets/img/project-aim_bert-bias.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Performance Analysis with Power BI<i
@@ -457,7 +457,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/computer-vision-v2-04.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="./assets/img/computer-vision-v2-04.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">House Price Prediction Model<i
@@ -491,7 +491,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="./assets/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Image Classification with CNNs<i
@@ -518,7 +518,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="./assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Sentiment Analysis on Social Media<i
@@ -556,22 +556,22 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+                <img alt="" src="./assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="./assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="./assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+                <img alt="" src="./assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
+                <img alt="" src="./assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                <img alt="" src="./assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
               </div>
             </div>
           </div>
@@ -582,22 +582,22 @@
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                <img alt="" src="./assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="./assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                <img alt="" src="./assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
+                <img alt="" src="./assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/logo-mark-lightbg.svg" class="responsive-img" />Seaborn
+                <img alt="" src="./assets/img/logo-mark-lightbg.svg" class="responsive-img" />Seaborn
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
+                <img alt="" src="./assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
               </div>
             </div>
           </div>
@@ -609,13 +609,13 @@
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
+                <img alt="" src="./assets/img/keras-logo.png" class="responsive-img" />Keras
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/TensorFlow.png" class="responsive-img" />TensorFlow
+                <img alt="" src="./assets/img/TensorFlow.png" class="responsive-img" />TensorFlow
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
+                <img alt="" src="./assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
               </div>
             </div>
           </div>
@@ -631,43 +631,43 @@
 
           <!-- Git -->
           <div class="col s6 m2">
-            <img alt="Git" src="/assets/img/git.png" class="responsive-img" style="height: 96px; width: 96px;" />
+            <img alt="Git" src="./assets/img/git.png" class="responsive-img" style="height: 96px; width: 96px;" />
             <p>Git</p>
           </div>
 
           <!-- Power BI -->
           <div class="col s6 m2">
-            <img alt="Power BI" src="/assets/img/icons8-power-bi-logo-48.png" class="responsive-img" style="height: 96px; width: 96px;" />
+            <img alt="Power BI" src="./assets/img/icons8-power-bi-logo-48.png" class="responsive-img" style="height: 96px; width: 96px;" />
             <p>Power BI</p>
           </div>
 
           <!-- Tableau -->
           <div class="col s6 m2">
-            <img alt="Tableau" src="/assets/img/icons8-tableau-software-96.png" class="responsive-img" style="height: 96px; width: 96px;" />
+            <img alt="Tableau" src="./assets/img/icons8-tableau-software-96.png" class="responsive-img" style="height: 96px; width: 96px;" />
             <p>Tableau</p>
           </div>
 
           <!-- Jupyter Notebook -->
           <div class="col s6 m2">
-            <img alt="Jupyter Notebook" src="/assets/img/Jupyter.png" class="responsive-img" style="height: 96px; width: 96px;" />
+            <img alt="Jupyter Notebook" src="./assets/img/Jupyter.png" class="responsive-img" style="height: 96px; width: 96px;" />
             <p>Jupyter Notebook</p>
           </div>
 
           <!-- AWS -->
           <div class="col s6 m2">
-            <img alt="AWS" src="/assets/img/aws.png" class="responsive-img" style="height: 96px; width: 96px;" />
+            <img alt="AWS" src="./assets/img/aws.png" class="responsive-img" style="height: 96px; width: 96px;" />
             <p>AWS</p>
           </div>
 
           <!-- Docker -->
           <div class="col s6 m2">
-            <img alt="Docker" src="/assets/img/docker-mark-blue.png" class="responsive-img" style="height: 96px; width: 96px;" />
+            <img alt="Docker" src="./assets/img/docker-mark-blue.png" class="responsive-img" style="height: 96px; width: 96px;" />
             <p>Docker</p>
           </div>
 
           <!-- Adobe Photoshop -->
           <div class="col s6 m2">
-            <img alt="Adobe Photoshop" src="/assets/img/icons8-adobe-photoshop-96.png" class="responsive-img" style="height: 96px; width: 96px;" />
+            <img alt="Adobe Photoshop" src="./assets/img/icons8-adobe-photoshop-96.png" class="responsive-img" style="height: 96px; width: 96px;" />
             <p>Adobe Photoshop</p>
           </div>
 
