--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <!-- Custom Styles-->
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Irulappan | Data Scientist</title>
+  
+<link rel="icon" type="image/png" href=".assets/img/Designer (1).png">
+<link rel="apple-touch-icon" type="image/png" href=".assets/img/Designer (1).png" sizes="180x180">
+<link rel="icon" type="image/png" href=".assets/img/Designer (1).png" sizes="16x16 32x32">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -37,16 +41,16 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Irulappan | Data Scientist" />
   <meta property="og:description" content="Data Scientist" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
+  <meta property="og:url" content="https://irulappan151204.github.io/portfolio/" />
   <meta property="og:site_name" content="Irulappan | Data Scientist" />
-  <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
-  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
+  <meta property="article:publisher" content="https://irulappan151204.github.io/portfolio/" />
+  <meta property="og:image" content="https://irulappan151204.github.io/portfolio/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+  <meta name="twitter:site" content="" />
+  <meta name="twitter:title" content="Data Scientist | ML Enthusiast | Problem Solver | Insight Seeker | Innovator" />
+  <meta name="twitter:description" content="Data Scientist" />
+  <meta name="twitter:url" content="" />
   <meta name="author" content="Irulappan" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="./assets/img/favicon/apple-icon-57x57.png" />
